Updated energy story

--- a/nyc-energy/index.html
+++ b/nyc-energy/index.html
@@ -22,10 +22,10 @@
         <h3 class="written-in-ink"><a href="https://www.inklestudios.com/ink">WRITTEN IN INK</a></h3>
 
         <div id="controls" class="buttons">
-          <a id="rewind" title="Restart story from beginning">restart</a>
-          <a id="save" title="Save progress">save</a>
-          <a id="reload" title="Reload from save point">load</a>
-          <a id="theme-switch" title="Switch theme">theme</a>
+            <a id="rewind" title="Restart story from beginning">restart</a>
+            <a id="save" title="Save progress">save</a>
+            <a id="reload" title="Reload from save point">load</a>
+            <a id="theme-switch" title="Switch theme">theme</a>
         </div>
 
         <div id="story" class="container">
@@ -39,6 +39,104 @@
     <script src="ink.js"></script>
     <script src="energy_game.js"></script>
     <script src="main.js"></script>
-    <div class=""
+    
+    <div class="center-content">
+        <p>Let's see what experts have to say!</p>
+
+        <p>By 2030, New York is projected to reduce its dependence on fossil fuels by half, if two newly approved
+            projects go ahead as planned. </p>
+        <p>Clean Path New York, a joint initiative between New York Power Authority and two firms, EnergyRe and
+            Invenergy, could bring over 7.5 million megawatt hours of solar and wind energy into the city. One megawatt
+            hour is about the same as the amount of electricity used by 330 houses in an hour. The other project — the
+            Champlain Hudson Power Express — could bring 1,250 megawatts of hydropower from Canada enough to power 1.2
+            million families with power for a year. The city currently consumes about 52 million megawatt hours of power
+            every year, according to Politico.</p>
+        <p>The city and state’s move to embrace cleaner energy has long been brewing. Both projects arose out of the
+            2019 Climate Leadership and Community Protection Act, which created a Climate Action Council charged with
+            developing a framework to reduce greenhouse gas emissions. In 2015, then Governor Andrew Cuomo launched an
+            initiative that mandated that half of all the electricity consumed in New York be generated from renewable
+            sources by 2030. The city’s goal is to be entirely dependent on clean electricity by 2040 and be carbon
+            neutral by 2050.</p>
+        <p>But for many people who have been advocating to get rid of some of the city’s dirtiest power plants—called
+            peaker plants—the new projects are not exactly the solution they had hoped for.</p>
+        <p>“Compared to other cities that’s a fairly aggressive goal. But, is it aggressive enough? No. We’re going to
+            have to do better than that,” Seth Mullendore, president and executive director of Clean Energy Group said.
+        </p>
+        <p>Solar and wind are not without negative effects, even as they have much smaller negative effects compared to
+            coal and fossil powered plants, according to Professor Matthew Neidell, who specializes in the intersection
+            of health, labor and environmental issues, at Columbia University’s Mailman School of Public Health.</p>
+        <p>New York City has 18 special power plants, commonly called peaker plants, most of which were built in the
+            early 2000s. These plants were part of the state’s PowerNow! Project and did not go through an environmental
+            review, according to Climate activist Keith Schue. </p>
+        <p>The problem with peaker plants isn’t isolated to Queens and New York City. Clean Energy Group, a national
+            nonprofit started an initiative in 2018 called Phase Out Peakers, a campaign calling to replace these
+            “polluting power plants,” as they describe them, with renewable energy sources.</p>
+        <p>Based on publicly available data, the group found that there are nearly 180 peaker plants spread across some
+            of the country’s most populated metro areas, which include Los Angeles, Washington DC-Baltimore area and
+            Philadelphia, among others. From this list, the highest concentration of peaker plants is 46 plants in the
+            New York-New Jersey belt.</p>
+        <p>In the city, these plants were intended to run during summer months when there’s an increased demand — a peak
+            in demand for power supply. That intention shifted over the years and now they’re run throughout the year,
+            according to former city council member Costa Constantinides.</p>
+        <p>Of these 18 plants, six are located in Queens, including the city’s oldest one, built in 1954, which is in
+            Astoria. Queens is also home to a greater percentage of immigrant population compared to other boroughs.
+            About half of the borough’s population is foreign-born, according to the latest figures available from the
+            American Community Survey. </p>
+        <p>Peaker plants pose health risks to those who live near them. Last year, PEAK Coalition, a group of clean
+            energy and environmental justice advocates including the Clean Energy Group, launched a campaign against
+            peaker plants in the city. The group published a report titled Dirty Energy, Big Money, inspecting the
+            long-term health disparities from exposure to these plants in low-income neighborhoods, especially those
+            populated by people of color.</p>
+        <p>750,000 people in the city live within a mile of a peaker plant and 78 percent of these people are either
+            low-income or people of color, according to the report.</p>
+        <p>Three zip codes in Queens — 11101, 11102, 11106 — have higher asthma rates than the entire borough, with 145
+            asthma related emergency visits for every 10,000 children. The lowest number is for children in Manhattan’s
+            Financial District with 28 visits for every 10,000 children, according to the latest available community
+            health profile for the neighborhood. The Queens neighborhoods are popularly referred to as “Asthma Alley”
+            due to high levels of asthma cases. It’s not just asthma, Constantinides said. The rates of other
+            respiratory illnesses are also higher in these neighborhoods, he said.</p>
+        <p>In Long Island City and Astoria neighborhoods of Queens, close to the oldest plant, the levels of the most
+            harmful air pollutant — fine particulate matter — are 7.8 micrograms per cubic meter, compared to 7.5
+            micrograms per cubic meter for the entire city, according to the same health profile report. EPA’s standard
+            for safe exposure to the same matter is an average of 12 micrograms per cubic meter. In Bronx’s Haven and
+            Melrose neighborhoods, which too are close to peaker plants, the levels are even higher at 8.6 per cubic
+            meter. The asthma emergency room visit rate among children ages 5 to 17 is also higher — 647 per 10,000
+            nearly triple the citywide rate.</p>
+        <p>Neidell living near fossil fuel-powered plants has other issues too.</p>
+        <p>“There’s social welfare impacts too. Things like workers’ productivity, students’ academic performance, a
+            whole bunch of factors are affected by pollution from fossil fuel plants,” he said.</p>
+        <p>There has been a growing community-driven push to shut peaker plants. Last month, residents and environmental
+            justice activists in South Bronx called for New York Power Authority to shut four peaker plants in the area.
+        </p>
+        <p>But, given the city’s current dependence on these plants, some experts believe, that might not be an
+            attainable goal. Not any time soon, at least.</p>
+        <p>“On any given day, Astoria alone meets 55 percent of the city’s power needs. We have the largest cluster of
+            power plants here,” Constantinides said.</p>
+        <p>Climate activist Keith Schue offers a different solution, vouching to shift focus away from just peaker
+            plants. If we look at the total pollution that comes from fossil fuels-powered plants, peaker plants are in
+            fact a smaller part of the bigger problem, Schue said, vouching to rid the entire city grid of fossil
+            fuel-dependent plants. For him, a reliable solution to the city and state’s clean energy needs is producing
+            more nuclear power.</p>
+        <p>“Nobody wants to talk about nuclear energy but it’s what we need I would argue,” he said.</p>
+        <p>In 2021, the city shut the Indian Point nuclear power plant after 59 years of operation. Queens resident and
+            environmentalist Isuru Seneviratne agreed. “It’s socially uncomfortable to talk nuclear but that’s the
+            direction we need to be headed in.”</p>
+        <p>“If you think about decarbonizing the right way, there has to be an energy mix,” he said. “Solar and wind are
+            intermittent sources. With energy supply, you can’t really have limits. So what’s ideal? A combination of
+            solar, wind and nuclear energy.”</p>
+        <p>The two big concerns with renewable energy are their cost and reliability, Neidell said, and even though cost
+            has reduced significantly, reliability remains a concern. </p>
+        <p>“Will we get enough energy to meet everybody’s energy needs with just solar and wind,” he said, “that’s where
+            nuclear comes in.” He also stressed on the need to replace the entire grid with clean energy, and not just
+            peaker plants.</p>
+        <p>“Sun and wind aren’t available on demand,” he said, “if you want to stop using peakers, you have to build
+            clean storage too.”</p>
+        <p>The challenge with increasing nuclear energy supply is a sense of fear and social stigma that’s attached with
+            the word ‘nuclear,’ Seneviratne said. The perfect energy profile isn’t an easy policy task, Seneviratne
+            said.</p>
+        <p>“We’re climate fanatics to an extent, but we’re also pro-humans. Our emission challenge shouldn’t be solved
+            with eating one less meal a day. We have to also keep in mind how to create jobs.”</p>
+    </div>
 </body>
+
 </html>
