--- a/nyc-energy/index.html
+++ b/nyc-energy/index.html
@@ -12,15 +12,37 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
-    <title>Style guides</title>
+    <!-- OPEN GRAPH META TAGS -->
+
+    <!-- HTML Meta Tags -->
+    <title>NYC enery debate</title>
+    <meta name="description" content="Experts discuss the best approach to a clean power grid in NYC">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://areenaarora.com/nyc-energy/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="NYC enery debate">
+    <meta property="og:description" content="Experts discuss the best approach to a clean power grid in NYC">
+    <meta property="og:image" content="https://areenaarora.com/nyc-energy/energy.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="areenaarora.com">
+    <meta property="twitter:url" content="https://areenaarora.com/nyc-energy/">
+    <meta name="twitter:title" content="NYC enery debate">
+    <meta name="twitter:description" content="Experts discuss the best approach to a clean power grid in NYC">
+    <meta name="twitter:image" content="https://areenaarora.com/nyc-energy/energy.jpg">
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
+    <!--  -->
 
 </head>
 
 <body>
 
     <div class="outerContainer">
-        <h3 class="written-in-ink"><a href="https://www.inklestudios.com/ink">WRITTEN IN INK</a></h3>
-
+        <!-- <h3 class="written-in-ink"><a href="https://www.inklestudios.com/ink">WRITTEN IN INK</a></h3> -->
         <div id="controls" class="buttons">
             <a id="rewind" title="Restart story from beginning">restart</a>
             <a id="save" title="Save progress">save</a>
@@ -39,7 +61,7 @@
     <script src="ink.js"></script>
     <script src="energy_game.js"></script>
     <script src="main.js"></script>
-    
+
     <div class="center-content">
         <p>Let's see what experts have to say!</p>
 
