--- a/nyc-energy/index.html
+++ b/nyc-energy/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>NYC enery debate</title>
+    <title>NYC energy debate</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="game-style.css">
     <link rel="stylesheet" href="../stylesheets/stylesheet.css">
