I AM THE SMARTEST COOKIE in the cookie jar. I just debugged something :)))

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <body>
 
-    <div class="center-content">
+    <div class="center-content-index">
         <nav>
             <a href="/about/">
                 <p>
