Added missing alt tag

--- a/street-flooding/index.html
+++ b/street-flooding/index.html
@@ -45,7 +45,7 @@
 </head>
 
 
-<img src="nyc-street.jpg" class="hero-image">
+<img src="nyc-street.jpg" class="hero-image" alt="Generic image of New York City">
 <h2 class="text-on-image">Are New York's streets prepared to handle flash floods?</h2>
 
 <body>
