--- a/nyc-energy/index.html
+++ b/nyc-energy/index.html
@@ -63,7 +63,7 @@
         <script src="main.js"></script>
 
 
-        <p>Let's see what experts have to say!</p>
+        <h2>Let's see what experts have to say!</h2>
 
         <p>By 2030, New York is projected to reduce its dependence on fossil fuels by half, if two newly approved
             projects go ahead as planned. </p>
@@ -74,7 +74,8 @@
             million families with power for a year. The city currently consumes about 52 million megawatt hours of power
             every year, according to Politico.</p>
         <p>The city and state’s move to embrace cleaner energy has long been brewing. Both projects arose out of the
-            2019 Climate Leadership and Community Protection Act, which created a Climate Action Council charged with
+            2019 Climate Leadership and Community Protection Act, which created a <a
+                href="https://climate.ny.gov/Our-Climate-Act/Draft-Scoping-Plan">Climate Action Council </a>charged with
             developing a framework to reduce greenhouse gas emissions. In 2015, then Governor Andrew Cuomo launched an
             initiative that mandated that half of all the electricity consumed in New York be generated from renewable
             sources by 2030. The city’s goal is to be entirely dependent on clean electricity by 2040 and be carbon
