--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         </div>
         <h2> I'm a <span style="color: #ea624e">data journalist.</span> I'm: </h2>
         <h3>
-            <ul><span style="background-color:#D3D3D3">~Interested in</span> covering climate crisis, environmental
-                justice and infrastructure.
+            <ul><span style="background-color:#D3D3D3">~Interested in</span> covering climate crisis, waste and
+                infrastructure.
             </ul>
             <ul><span style="background-color:#D3D3D3">~Working on</span> improving my visualization skills and writing
                 cleaner code.</ul>
@@ -122,8 +122,7 @@
             <div class="each-card">
                 <a href="/climate-essay/" target="_blank">
                     <p class="card-headline">A PERSONAL ESSAY ON CLIMATE CRISIS</p>
-                    <img src="./card-photos/mountains.jpg" alt="Snow covered mountains"
-                        style="width:100%">
+                    <img src="./card-photos/mountains.jpg" alt="Snow covered mountains" style="width:100%">
                     <p class="card-description">My mom often complained though, in confusion more than dismay, about how
                         many of her winter-favorite vegetables were now available almost all year long ...</p>
                 </a>
