--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
         </div>
         <h2> I'm a <span style="color: #ea624e">data journalist.</span> I'm: </h2>
         <h3>
-            <ul><span style="background-color:#D3D3D3">~Interested in</span> covering climate crisis, waste and
+            <ul><span style="background-color:#D3D3D3">~Interested in</span> covering climate crisis, waste management
+                and
                 infrastructure.
             </ul>
             <ul><span style="background-color:#D3D3D3">~Working on</span> improving my visualization skills and writing
