--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
                 </a>
             </div>
             <div class="each-card">
-                <!-- <a href="https://areenaarora.com/stories/data-viz/vaccines" target="_blank"> -->
+                <a href="https://github.com/areenaarora/vaccines-project" target="_blank">
                 <p class="card-headline">COMPARING DIFFERENT COVID VACCINES</p>
                 <img src="./card-photos/vaccines.jpg" alt="Vaccines" style="width:100%">
                 <p class="card-description">On CDC’s website, the words explaining vaccine ingredients for both
                     Pfizer and Moderna start with
                     the same sentences ...</p>
-                <!-- </a> -->
+                </a>
             </div>
             <div class="each-card">
                 <a href="https://apnews.com/article/10ab9cb7a5e24bdd86337d36a48c539b" target="_blank">
