Added spills project link

--- a/index.html
+++ b/index.html
@@ -130,11 +130,19 @@
             </div>
             <div class="each-card">
                 <a href="https://github.com/areenaarora/vaccines-project" target="_blank">
-                <p class="card-headline">COMPARING DIFFERENT COVID VACCINES</p>
-                <img src="./card-photos/vaccines.jpg" alt="Vaccines" style="width:100%">
-                <p class="card-description">On CDC’s website, the words explaining vaccine ingredients for both
-                    Pfizer and Moderna start with
-                    the same sentences ...</p>
+                    <p class="card-headline">COMPARING DIFFERENT COVID VACCINES</p>
+                    <img src="./card-photos/vaccines.jpg" alt="Vaccines" style="width:100%">
+                    <p class="card-description">On CDC’s website, the words explaining vaccine ingredients for both
+                        Pfizer and Moderna start with
+                        the same sentences ...</p>
+                </a>
+            </div>
+            <div class="each-card">
+                <a href="https://github.com/areenaarora/ny-spills" target="_blank">
+                    <p class="card-headline">NEW YORK'S HAZARDOUS MATERIAL SPILLS</p>
+                    <img src="./card-photos/hazard.jpg" alt="Vaccines" style="width:100%">
+                    <p class="card-description">A look at hazardous material spills and their clean up in New York. This
+                        project is a work in progress ...</p>
                 </a>
             </div>
             <div class="each-card">
