--- a/index.html
+++ b/index.html
@@ -163,6 +163,14 @@
                         report detailing that it had been deemed critical in 2013 ...</p>
                 </a>
             </div>
+            <div class="each-card">
+                <a href="https://www.idahopress.com/news/local/2cscoop/indian-creek-plaza-over-budget-and-behind-original-construction-schedule/article_729c087a-780c-5202-bacf-34255edb016d.html"
+                    target="_blank">
+                    <p class="card-headline">INVESTIGATING CITY PROJECT DELAY</p>
+                    <img src="./card-photos/construction.jpg.jpg" alt="Culvert" style="width:100%">
+                    <p class="card-description">Long-form investigation into a city of Caldwell project that went over-budget and wasn't completed in the time advertized ...</p>
+                </a>
+            </div>
         </div>
     </div>
 </body>
