--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <a href="https://www.idahopress.com/news/local/2cscoop/indian-creek-plaza-over-budget-and-behind-original-construction-schedule/article_729c087a-780c-5202-bacf-34255edb016d.html"
                     target="_blank">
                     <p class="card-headline">INVESTIGATING CITY PROJECT DELAY</p>
-                    <img src="./card-photos/construction.jpg.jpg" alt="Culvert" style="width:100%">
+                    <img src="./card-photos/construction.jpg" alt="Culvert" style="width:100%">
                     <p class="card-description">Long-form investigation into a city of Caldwell project that went over-budget and wasn't completed in the time advertized ...</p>
                 </a>
             </div>
