--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <div class="each-card">
                 <a href="https://github.com/areenaarora/ny-spills" target="_blank">
                     <p class="card-headline">NEW YORK'S HAZARDOUS MATERIAL SPILLS</p>
-                    <img src="./card-photos/hazard.jpg" alt="Vaccines" style="width:100%">
+                    <img src="./card-photos/hazard.jpg" alt="Spills generic image" style="width:100%">
                     <p class="card-description">A look at hazardous material spills and their clean up in New York. This
                         project is a work in progress ...</p>
                 </a>
@@ -167,7 +167,7 @@
                 <a href="https://www.idahopress.com/news/local/2cscoop/indian-creek-plaza-over-budget-and-behind-original-construction-schedule/article_729c087a-780c-5202-bacf-34255edb016d.html"
                     target="_blank">
                     <p class="card-headline">INVESTIGATING CITY PROJECT DELAY</p>
-                    <img src="./card-photos/construction.jpg" alt="Culvert" style="width:100%">
+                    <img src="./card-photos/construction.jpg" alt="Cconstruction" style="width:100%">
                     <p class="card-description">Long-form investigation into a city of Caldwell project that went over-budget and wasn't completed in the time advertized ...</p>
                 </a>
             </div>
