--- a/index.html
+++ b/index.html
@@ -167,8 +167,16 @@
                 <a href="https://www.idahopress.com/news/local/2cscoop/indian-creek-plaza-over-budget-and-behind-original-construction-schedule/article_729c087a-780c-5202-bacf-34255edb016d.html"
                     target="_blank">
                     <p class="card-headline">INVESTIGATING CITY PROJECT DELAY</p>
-                    <img src="./card-photos/construction.jpg" alt="Cconstruction" style="width:100%">
+                    <img src="./card-photos/construction.jpg" alt="Construction" style="width:100%">
                     <p class="card-description">Long-form investigation into a city of Caldwell project that went over-budget and wasn't completed in the time advertized ...</p>
+                </a>
+            </div>
+            <div class="each-card">
+                <a href="https://areena.substack.com/p/figuring-out-where-to-buy-the-best?"
+                    target="_blank">
+                    <p class="card-headline">THE SEARCH FOR GOOD BIRYANI THROUGH SCRAPING</p>
+                    <img src="./card-photos/bowl.jpg" alt="A bowl" style="width:100%">
+                    <p class="card-description">For my first project for my Data Studio class, I scraped restaurant reviews for a specific dish to find out where to get the best Biryani in India  ...</p>
                 </a>
             </div>
         </div>
