--- a/index.html
+++ b/index.html
@@ -129,6 +129,14 @@
                 </a>
             </div>
             <div class="each-card">
+                <a href="/uttarakhand-floods/" target="_blank">
+                    <p class="card-headline">REMEMBERING 2013 UTTARAKHAND FLODOS</p>
+                    <img src="./card-photos/uttarakhand.jpg" alt="Mountains" style="width:100%">
+                    <p class="card-description">The rock has since been named “Bhim Shila”, meaning the divine rock.
+                        Pilgrims now pray in front of the rock, seeking its blessings, Guru added ...</p>
+                </a>
+            </div>
+            <div class="each-card">
                 <a href="https://github.com/areenaarora/vaccines-project" target="_blank">
                     <p class="card-headline">COMPARING DIFFERENT COVID VACCINES</p>
                     <img src="./card-photos/vaccines.jpg" alt="Vaccines" style="width:100%">
@@ -168,15 +176,16 @@
                     target="_blank">
                     <p class="card-headline">INVESTIGATING CITY PROJECT DELAY</p>
                     <img src="./card-photos/construction.jpg" alt="Construction" style="width:100%">
-                    <p class="card-description">Long-form investigation into a city of Caldwell project that went over-budget and wasn't completed in the time advertized ...</p>
+                    <p class="card-description">Long-form investigation into a city of Caldwell project that went
+                        over-budget and wasn't completed in the time advertized ...</p>
                 </a>
             </div>
             <div class="each-card">
-                <a href="https://areena.substack.com/p/figuring-out-where-to-buy-the-best?"
-                    target="_blank">
+                <a href="https://areena.substack.com/p/figuring-out-where-to-buy-the-best?" target="_blank">
                     <p class="card-headline">THE SEARCH FOR GOOD BIRYANI THROUGH SCRAPING</p>
                     <img src="./card-photos/bowl.jpg" alt="A bowl" style="width:100%">
-                    <p class="card-description">For my first project for my Data Studio class, I scraped restaurant reviews for a specific dish to find out where to get the best Biryani in India  ...</p>
+                    <p class="card-description">For my first project for my Data Studio class, I scraped restaurant
+                        reviews for a specific dish to find out where to get the best Biryani in India ...</p>
                 </a>
             </div>
         </div>
