--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             </div>
             <div class="each-card">
                 <a href="https://areena.substack.com/p/figuring-out-where-to-buy-the-best?" target="_blank">
-                    <p class="card-headline">THE SEARCH FOR GOOD BIRYANI THROUGH SCRAPING</p>
+                    <p class="card-headline">WEB SCRAPING FOR GOOD BIRYANI</p>
                     <img src="./card-photos/bowl.jpg" alt="A bowl" style="width:100%">
                     <p class="card-description">For my first project for my Data Studio class, I scraped restaurant
                         reviews for a specific dish to find out where to get the best Biryani in India ...</p>
