--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </div>
             <div class="each-card">
                 <a href="/uttarakhand-floods/" target="_blank">
-                    <p class="card-headline">REMEMBERING 2013 UTTARAKHAND FLODOS</p>
+                    <p class="card-headline">REMEMBERING UTTARAKHAND FLOODS</p>
                     <img src="./card-photos/uttarakhand.jpg" alt="Mountains" style="width:100%">
                     <p class="card-description">The rock has since been named “Bhim Shila”, meaning the divine rock.
                         Pilgrims now pray in front of the rock, seeking its blessings, Guru added ...</p>
