--- a/uttarakhand-floods/index.html
+++ b/uttarakhand-floods/index.html
@@ -12,6 +12,32 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
+    <!-- Open graph meta tags -->
+
+    <!-- HTML Meta Tags -->
+    <title>Remembering Uttarakhand Floods</title>
+    <meta name="description"
+        content="When people began looking for their loved ones, they could hear cries of help from the thick marsh … we had no means of rescuing our loved ones">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://areenaarora.com/uttarakhand-floods/uttarakhand.jpg">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Remembering Uttarakhand Floods">
+    <meta property="og:description"
+        content="When people began looking for their loved ones, they could hear cries of help from the thick marsh … we had no means of rescuing our loved ones">
+    <meta property="og:image" content="https://areenaarora.com/uttarakhand-floods/uttarakhand.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="areenaarora.com">
+    <meta property="twitter:url" content="https://areenaarora.com/uttarakhand-floods/uttarakhand.jpg">
+    <meta name="twitter:title" content="Remembering Uttarakhand Floods">
+    <meta name="twitter:description"
+        content="When people began looking for their loved ones, they could hear cries of help from the thick marsh … we had no means of rescuing our loved ones">
+    <meta name="twitter:image" content="https://areenaarora.com/uttarakhand-floods/uttarakhand.jpg">
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+    <!-- end of meta tags -->
     <title>Remembering Uttarakhand Floods</title>
 </head>
 
