--- a/about/index.html
+++ b/about/index.html
@@ -84,7 +84,7 @@
             <h3> <b><span style="background-color:#D3D3D3">Languages:</span></b> Hindi, Punjabi </h3>
         </div>
         <div>
-            <a class="aboutme-buttons" href="Areena Arora_Resume.pdf" target="_blank">Download my resume</a>
+            <a class="aboutme-buttons" href="../Areena-Arora_Resume.pdf" target="_blank">Download my resume</a>
             &nbsp;&nbsp;&nbsp;&nbsp;
             <a class="aboutme-buttons" href="https://calendly.com/areena-arora" target="_blank">Let's schedule a
                 chat</a>
