--- a/nyc-energy/index.html
+++ b/nyc-energy/index.html
@@ -61,8 +61,8 @@
         <script src="ink.js"></script>
         <script src="energy_game.js"></script>
         <script src="main.js"></script>
-
-
+        <br>
+        <br>
         <h2>Let's see what experts have to say!</h2>
 
         <p>By 2030, New York is projected to reduce its dependence on fossil fuels by half, if two newly approved
@@ -85,6 +85,9 @@
         <p>“Compared to other cities that’s a fairly aggressive goal. But, is it aggressive enough? No. We’re going to
             have to do better than that,” Seth Mullendore, president and executive director of Clean Energy Group said.
         </p>
+        <img src="power-plant-2.jpeg" alt="A power plant in Astoria, Queens">
+        <figcaption>A power plant in Astoria, Queens</figcaption>
+        <br>
         <p>Solar and wind are not without negative effects, even as they have much smaller negative effects compared to
             coal and fossil powered plants, according to Professor Matthew Neidell, who specializes in the intersection
             of health, labor and environmental issues, at Columbia University’s Mailman School of Public Health.</p>
