--- a/street-flooding/index.html
+++ b/street-flooding/index.html
@@ -34,7 +34,6 @@
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
-
     <!--  -->
     <link rel="icon" type="image/x-icon" href="../favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -121,7 +120,7 @@
             Weather Service. The average number of days it rains in the city is 134, according to data cited in the
             study.
         </p>
-        <p>Devitt, whose meteorology career spans over two decades, gave historical context.
+        <p>Davitt, whose meteorology career spans over two decades, gave historical context.
         </p>
         <p>“Rainfall records for the city go back to the late 1800s ... This past summer, twice, we set records for the
             most amount of rain in a single hour,” he said.
@@ -130,13 +129,13 @@
             Department of Environmental Protection. The administration also announced the creation of a new position at
             the City Hall — an Extreme Weather Coordinator.
         </p>
-        <p>“The city is more proactive now in how they communicate,” Devitt said. “They put an emphasis on alerting the
+        <p>“The city is more proactive now in how they communicate,” Davitt said. “They put an emphasis on alerting the
             public as early as possible … The city seems to play catch up a lot.”
         </p>
         <img src="manhattan.jpg" class="img-1" alt="Manhattan">
         <p>For his neighborhood, the easiest solution can really just be to pump water out regularly, D'souza said.
         </p>
-        <p>“Infrastructure is failing at a lower threshold now compared to a decade or so ago,” Devitt said.
+        <p>“Infrastructure is failing at a lower threshold now compared to a decade or so ago,” Davitt said.
         </p>
         <p>D’souza agrees. While he thinks climate change is responsible for the flooding, he also places the onus on
             city planning, poor infrastructural upkeep and residents’ behavior for causing street flooding.
@@ -149,7 +148,7 @@
         </p>
         <p>City’s department of environmental protection could not be reached for comments.
         </p>
-        <p class="highlighted-words">“Manhattan is the new Miami,” Devitt said. “We have to future proof the city.”
+        <p class="highlighted-words">“Manhattan is the new Miami,” Davitt said. “We have to future proof the city.”
         </p>
     </div>
 </body>
