--- a/mapping/index.html
+++ b/mapping/index.html
@@ -14,8 +14,9 @@
     <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
     <title>Mapping!</title>
 </head>
+
 <body>
-    <div class="aboutme-div">
+    <div class="center-content">
         <nav>
             <a href="../">
                 <p>
@@ -23,6 +24,9 @@
                 </p>
             </a>
         </nav>
-        <h1>Welcome to my mapping adevntures!</h1>
-        </div>
-        </body>
+        <h1>Welcome to my mapping adevntures! 🗺</h1>
+        <p>On this page, I'll be cataloging all my mapping class assignments over the summer. I'm interested in doing
+            local stories on climate crisis, infrastructure related issues and more!</p>
+        <h3 class="highlighted-words">Stay tuned!</h3>
+    </div>
+</body>
