Added mapping link on homepage

--- a/index.html
+++ b/index.html
@@ -82,6 +82,15 @@
                 </a>
             </div>
             <div class="each-card">
+                <a href="/mapping/" target="_blank">
+                    <p class="card-headline">LEARNING MAPPING</p>
+                    <img src="./card-photos/map.jpg" alt="Map" style="width:100%">
+                    <p class="card-description">On this page, I'll be cataloging homework from my mapping class over the
+                        summer
+                    </p>
+                </a>
+            </div>
+            <div class="each-card">
                 <a href="https://github.com/areenaarora/new-york-senate_scrape" target="_blank">
                     <p class="card-headline">NEW YORK LAWS SCRAPED</p>
                     <img src="./card-photos/new-york.jpg" alt="Grand Central Station in New York" style="width:100%">
