--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </a>
             </div>
             <div class="each-card">
-                <a href="/street-flooding/" target="_blank">
+                <a href="/salaries/" target="_blank">
                     <p class="card-headline">ANALYZING NYC PAYROLL</p>
                     <img src="./card-photos/money.jpg" alt="Money" style="width:100%">
                     <p class="card-description">The city knows it has a problem with overtime pay — across different agencies and different levels of pay ...
