--- a/salaries/index.html
+++ b/salaries/index.html
@@ -96,7 +96,7 @@
     <img src="cover-money.jpg" class="hero-image" alt="Generic image of money">
     <h2 class="text-on-image">As retirement nears, some city officials clock in
         more overtime</h2>
-        <h3 class="sub-text-on-image">The city knows it has a problem with overtime pay — across different agencies and different levels of pay.</h3>
+        <h3 class="sub-text-on-image">The city has spent over $9 billion in overtime pay in the last five years.</h3>
     <div class="center-content">
         <br>
         <p>Between 2017 and 2021, some New York City employees clocked in more hours in overtime — sometimes even more than
