--- a/salaries/index.html
+++ b/salaries/index.html
@@ -96,15 +96,16 @@
     <img src="cover-money.jpg" class="hero-image" alt="Generic image of money">
     <h2 class="text-on-image">As retirement nears, some city officials clock in
         more overtime</h2>
-        <h3 class="sub-text-on-image">The city has spent over $9 billion in overtime pay in the last five years.</h3>
+    <h3 class="sub-text-on-image">The city has spent over $9 billion in overtime pay in the last five years.</h3>
     <div class="center-content">
         <br>
-        <p>Between 2017 and 2021, some New York City employees clocked in more hours in overtime — sometimes even more than
-            regular hours —as they neared 20 years of service. Nearly 200 employees, now retired, worked more in overtime
+        <p>Between 2017 and 2021, some New York City employees clocked in more hours in overtime — sometimes even more
+            than
+            regular hours —as they neared 20 years of service. Nearly 200 employees, now retired, clocked more overtime
             than regular hours from just three agencies.
         </p>
         <p>Aware of this phenomenon that has crippled state coffers at least for a decade, some nonprofit watchdog
-            organizations, like Citizen Budget Commission (CBC), noted that this pattern is common as employees near 20
+            organizations, like Citizen Budget Commission, noted that this pattern is common as employees near 20
             years of service when they become eligible for voluntary retirement.
         </p>
         <!-- CHART CODE -->
@@ -863,27 +864,21 @@
 
 
         <!-- CHART CODE ENDS HERE -->
-        <p>Pension “is based on what your salary is at the point of separation”, explained Ana Champeny, the research
-            director at Citizen Budget Commission (CBC), a nonprofit watchdog organization focused on city’s budgeting
-            and finances.
+        <p>Pension “is based on what your salary is at the point of separation”, Ana Champeny, research
+            director at the Citizen Budget Commission, said.
         </p>
-        <p>In the five-year period, the city spent over a billion dollars each year on overtime. Broken down by
-            agencies, the three uniformed ones — New York Police, Fire Department, and Department of Correction spent
-            the most. And, even though the total spending on overtime hasn’t changed significantly over these years, it
-            still poses a problem, Champeny said. “I think it's still a significant amount of spending and poses some
-            questions: Is there a more efficient way to work so you’re not spending too much on overtime?”
+        <p>In the five-year period from 2017 to the end of 2021, the city spent nearly two billion dollars each year on
+            overtime.
         </p>
-        <p>The pattern is especially prevalent in Manhattan and Brooklyn.
+        <p>
+            Even though the total spending on overtime hasn’t changed significantly over these years, it
+            still poses a problem, Champeny said. It "poses some
+            questions: Is there a more efficient way to work so you’re not spending too much on overtime," she said.
         </p>
-        <p>One employee particularly, a special assignment lieutenant, earned over $300,000 in overtime pay in the
-            five-year period. Before retiring, he clocked in over 2,400 hours in overtime. This is the same as working
-            10 extra hours everyday, during a period of five days a week, for one whole year. Doing so, he earned
-            $162,000 in overtime pay in 2020 alone, payroll data shows.
-        </p>
-        <p>While the Department of Corrections has far fewer employees, compared to NYPD — nearly 68,000, it is one of
-            the highest spenders in terms of overtime pay. The department also has some of the highest number of
-            employees working more overtime than regular hours. Twenty three corrections’ officers worked more than
-            1,500 hours in overtime in a given year.
+        <p>The three uniformed ones — New York Police, Fire Department, and Department of Correction spent
+            the most on overtime. Notably, over 300 employees from these agencies clocked over 1500 hours in overtime each year, on top of working regular 2,040 hours a year on average. Six of them are no longer on the city's payroll.</p>
+        <p>While the Department of Corrections has one fourth the number of employees as the NYPD on its payroll, it is among
+            the highest spenders of overtime pay.
         </p>
         <p>Unlike the NYPD, over one third have worked for DOC employees have worked for less than ten years, data
             shows. About 81% are currently deployed in Queens, the borough that encompassed the origin of most of last
