--- a/salaries/index.html
+++ b/salaries/index.html
@@ -880,13 +880,8 @@
         <p>While the Department of Corrections has one fourth the number of employees as the NYPD on its payroll, it is among
             the highest spenders of overtime pay.
         </p>
-        <p>Unlike the NYPD, over one third have worked for DOC employees have worked for less than ten years, data
-            shows. About 81% are currently deployed in Queens, the borough that encompassed the origin of most of last
-            year's overtime for the agency.
-        </p>
         <p>Most notably, a warden assistant for the agency clocked in 3,147 hours in overtime in 2020, in addition to
-            working 2,040 hours in regular hours. A similar behavior is seen among a bunch of captains and corrections
-            officers.
+            working 2,040 hours in regular hours. Nearly 250 others clocked over 1500 hours in overtime.
         </p>
         <p>It’s not just uniformed agencies that present this pattern, Champaney said. “You’ll see the pattern for some
             skilled trades too, which includes plumbers and electricians for instance.” Last January the city’s public
