--- a/salaries/index.html
+++ b/salaries/index.html
@@ -899,5 +899,7 @@
         <p>Like Callahan, Champeny too said that these negative hours are often adjustments made for accounting
             purposes. “It’s raw, dirty data,” he added.
         </p>
+        <p class="code-block"><a href="https://github.com/areenaarora/city-employees-salaries">
+            If you'd like to check the code for this project, click here!</a></p>
     </div>
 </body>
